<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_cmake</name>
  <version>1.1.4</version>
  <description>The entry point package for the ament buildsystem in CMake.</description>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>Apache License 2.0</license>

  <author>Dirk Thomas</author>

  <buildtool_depend>cmake</buildtool_depend>

  <buildtool_export_depend>cmake</buildtool_export_depend>

  <build_depend>ament_cmake_core</build_depend>
  <build_depend>ament_cmake_export_dependencies</build_depend>

  <build_export_depend>ament_cmake_core</build_export_depend>
  <build_export_depend>ament_cmake_export_definitions</build_export_depend>
  <build_export_depend>ament_cmake_export_dependencies</build_export_depend>
  <build_export_depend>ament_cmake_export_include_directories</build_export_depend>
  <build_export_depend>ament_cmake_export_interfaces</build_export_depend>
  <build_export_depend>ament_cmake_export_libraries</build_export_depend>
  <build_export_depend>ament_cmake_export_link_flags</build_export_depend>
  <build_export_depend>ament_cmake_export_targets</build_export_depend>
  <build_export_depend>ament_cmake_gen_version_h</build_export_depend>
  <build_export_depend>ament_cmake_libraries</build_export_depend>
  <build_export_depend>ament_cmake_python</build_export_depend>
  <build_export_depend>ament_cmake_target_dependencies</build_export_depend>
  <build_export_depend>ament_cmake_test</build_export_depend>
  <build_export_depend>ament_cmake_version</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
