<?xml version="1.0"?>
<package format="2">
  <name>ament_cmake_auto</name>
  <version>0.0.0</version>
  <description>The auto-magic functions for ease to use of the ament buildsystem in CMake.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
</package>
