<?xml version="1.0"?>
<package format="2">
  <name>ament_cmake_core</name>
  <version>0.0.0</version>
  <description>The core of the ament buildsystem in CMake.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>python-ament-package</buildtool_depend>

  <buildtool_export_depend>cmake</buildtool_export_depend>
  <buildtool_export_depend>python-ament-package</buildtool_export_depend>

  <build_depend>ament_cmake_symlink_install</build_depend>

  <build_export_depend>ament_cmake_symlink_install</build_export_depend>
</package>
