<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_cmake_core</name>
  <version>2.0.2</version>
  <description>
    The core of the ament buildsystem in CMake.

    Several subcomponents provide specific funtionalities:
    * environment: provide prefix-level setup files
    * environment_hooks: provide package-level setup files and environment hooks
    * index: store information in an index and retrieve them without crawling
    * package_templates: templates from the ament_package Python package
    * symlink_install: use symlinks for CMake install commands
  </description>

  <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>

  <license>Apache License 2.0</license>

  <author>Dirk Thomas</author>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>

  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>ament_package</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>

  <buildtool_export_depend>cmake</buildtool_export_depend>
  <buildtool_export_depend>ament_package</buildtool_export_depend>
  <buildtool_export_depend>python3-catkin-pkg-modules</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
