<?xml version="1.0"?>
<package format="2">
  <name>ament_cmake_export_definitions</name>
  <version>0.0.0</version>
  <description>The ability to export defintions to downstream packages in the ament buildsystem.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_depend>ament_cmake_environment</buildtool_depend>
  <buildtool_depend>ament_cmake_index</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
</package>
