<?xml version="1.0"?>
<package format="2">
  <name>ament_cmake_export_link_flags</name>
  <version>0.9.1</version>
  <description>The ability to export link flags to downstream packages in the ament buildsystem.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
