<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_cmake_gen_version_h</name>
  <version>1.1.4</version>
  <description>Generate a C header containing the version number of the package</description>
  <maintainer email="serge@safeai.ai">Serge Nikulin</maintainer>
  <license>Apache License 2.0</license>

  <author>Serge Nikulin</author>

  <buildtool_depend>ament_cmake_core</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
