<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_cmake_gmock</name>
  <version>1.1.6</version>
  <description>The ability to add Google mock-based tests in the ament buildsystem in CMake.</description>

  <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>

  <license>Apache License 2.0</license>

  <author>Dirk Thomas</author>

  <buildtool_depend>ament_cmake_core</buildtool_depend>

  <buildtool_export_depend>ament_cmake_gtest</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>
  <buildtool_export_depend>gmock_vendor</buildtool_export_depend>
  <buildtool_export_depend>google-mock</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
