<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_cmake_google_benchmark</name>
  <version>2.7.2</version>
  <description>The ability to add Google Benchmark tests in the ament buildsystem in CMake.</description>

  <maintainer email="clalancette@gmail.com">Chris Lalancette</maintainer>

  <license>Apache License 2.0</license>

  <author>Dirk Thomas</author>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
  <author>Scott K Logan</author>

  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_depend>ament_cmake_export_dependencies</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>ament_cmake_test</exec_depend>
  <exec_depend>google_benchmark_vendor</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
