<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ament_cmake_gtest</name>
  <version>0.7.2</version>
  <description>The ability to add gtest-based tests in the ament buildsystem in CMake.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>

  <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>
  <buildtool_export_depend>gtest</buildtool_export_depend>
  <buildtool_export_depend>gtest_vendor</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
