<?xml version="1.0"?>
<package format="2">
  <name>ament_cmake_nose</name>
  <version>0.0.0</version>
  <description>The ability to add nose-based tests in the ament buildsystem in CMake.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>
  <buildtool_export_depend>python-nose</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
